# flowbench

./: .copier-answers.yml  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  README.md  mise.toml  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: GLOSSARY.md
docs/design/: runner.md
docs/roadmap/: README.md  ROADMAP.md  current-state.md  target-architecture.md  verification.md  vision.md
docs/roadmap/epics/: E00-guardrails.md  E01-one-execution-model.md  E02-runtime-robustness.md  E03-case-format-and-cli.md  E04-flow-portability.md
docs/roadmap/proposals/: P01-statistics-and-scale.md  P02-reporting-dx.md  P03-evaluation-quality.md
docs/roadmap/research/: flow-requirements.md
scenarios/coding_workflow/: scenario.py
scenarios/coding_workflow/cases/todo_app/: acceptance.py  eval.py  flows.py  scorers.py  solver.py  task.py
scenarios/coding_workflow/cases/todo_app/case/: acceptance.md  envisioned-shape.md
scenarios/coding_workflow/cases/todo_app/fixtures/: sessions.py
scenarios/coding_workflow/cases/todo_app/fixtures/bad_app/todo/: __main__.py
scenarios/coding_workflow/cases/todo_app/fixtures/good_app/todo/: __main__.py
scripts/: patch_omnigent.py
src/flowbench/: cli.py
src/flowbench/report/: compare.py
src/flowbench/runner/: driver.py  flow.py  judge.py  loop.py  run_dir.py  subscription_model.py
tests/: test_compare.py  test_smoke.py
tests/runner/: test_driver.py  test_driver_bundle.py  test_driver_config.py  test_flow.py  test_loop.py
tests/scenarios/todo_app/: test_acceptance.py  test_eval_discoverable.py  test_live.py  test_run_dir.py  test_scorers.py  test_task.py
