[project]
name = "flowbench"
version = "0.0.1"
description = "A benchmark that compares agentic flows on a fixed case, all driven through omnigent as the meta-harness."
authors = [{ name = "Krzysztof Zarzycki", email = "k.zarzycki@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6", "pytest-cov>=5", "diff-cover>=9"]
# agent-eval runner: drive a real coding agent (omnigent) under the Inspect spine.
# Optional + heavy (omnigent pulls ~64 deps, needs Node>=22, tmux). The runner and
# the todo_app demo import inspect_ai, so the full suite needs this extra:
#   uv sync --extra dev --extra spike
spike = [
  "inspect-ai>=0.3.240",
  "omnigent-client==0.1.1",   # pinned (pre-1.0 churn)
  "omnigent==0.1.1",          # the driver imports omnigent.host at start(); same pin
]

[project.scripts]
flowbench = "flowbench.cli:app"

# Inspect discovers extension providers via the `inspect_ai` entry-point group,
# loading the one whose NAME matches before resolving `--model claudesub/...`.
# Importing the module runs its @modelapi registration, which is what lets the
# Inspect CLI (`inspect eval … --model claudesub/sonnet`) resolve the subscription
# provider. Requires `--extra spike` (inspect-ai installed).
[project.entry-points.inspect_ai]
claudesub = "flowbench.runner.subscription_model"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The engine ships always; scenarios ship too so the Inspect eval files and their
# case fixtures/*.md stay importable and readable from an editable install.
packages = ["src/flowbench", "scenarios"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "live_agent: drives a real coding agent via omnigent (RUN_LIVE_AGENT=1 + spike extra); skipped by default",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
